--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Starmap</title>
+	<title>TACMap</title>
 	%OGP%
 	<style>
 		@font-face {
@@ -57,17 +57,17 @@
 		<div class="loading-elevated" id="loading-elevated">
 			<svg class="loading-text" xmlns="http://www.w3.org/2000/svg" width="299.5" height="64" viewBox="0 0 299.5 64">
 				<g id="Group_1" data-name="Group 1" transform="translate(-732 895)">
-					<text id="ISAN" transform="translate(732 -843)" fill="#707070" font-size="60"
+					<text id="TPS" transform="translate(732 -843)" fill="#707070" font-size="60"
 						font-family="SquadaOne-Regular, Squada One">
-						<tspan x="0" y="0">ISAN</tspan>
+						<tspan x="0" y="0">TPS</tspan>
 					</text>
-					<text id="Integrated_System_" data-name="Integrated System " transform="translate(836 -867)"
+					<text id="Tactical_" data-name="Tactical " transform="translate(836 -867)"
 						fill="#707070" font-size="21" font-family="SquadaOne-Regular, Squada One">
-						<tspan x="0" y="0">Integrated System </tspan>
+						<tspan x="0" y="0">Tactical</tspan>
 					</text>
-					<text id="Autonomous_Navigation" data-name="Autonomous Navigation" transform="translate(836 -843)"
+					<text id="Positioning_System" data-name="Positioning System" transform="translate(836 -843)"
 						fill="#707070" font-size="21" font-family="SquadaOne-Regular, Squada One">
-						<tspan x="0" y="0">Autonomous Navigation</tspan>
+						<tspan x="0" y="0">Positioning System</tspan>
 					</text>
 					<line id="Line_1" data-name="Line 1" x2="203" transform="translate(828.5 -861.5)" fill="none"
 						stroke="#707070" stroke-width="1" />
@@ -76,11 +76,8 @@
 
 
 			<!--<p class="loading-text">
-				<a href="https://https://github.com/Collective-SB/Starmap" style="color: white">Starmap</a>,
-				made by Strikeeaglechase with
-				<a href="https://discord.gg/VnU8apR" style="color: white" >Collective</a>.
-
-			<p class="loading-text">Other Contributors:<br>Volcano, MuNK, Timothy, IHave</p> 
+				<a href="https://https://github.com/chrishultin/Starmap-UI" style="color: white">Starmap</a>,
+				By Spedione, based off of code from The Collective
 			</p>-->
 			<div class="loading-container-sub">
 				<p id="loading-text" class="loading-text"> Loading UI-Interface... </p>
@@ -324,7 +321,7 @@
 					<div class="option-02-04">
 						<div class="checkbox-option checkbox">
 							<input id="isanRangeDisp" type="checkbox" name="isanRangeDisp">
-							<p style="display: inline;">Display ISAN range</p>
+							<p style="display: inline;">Display TPS range</p>
 						</div>
 					</div>
 
@@ -374,7 +371,7 @@
 					<div class="option-02-12">
 						<div class="checkbox-option checkbox">
 							<input id="showIsanAxis" type="checkbox" name="showIsanAxis">
-							<p style="display: inline;">Show ISAN axis</p>
+							<p style="display: inline;">Show TPS axis</p>
 						</div>
 					</div>
 				</div>
@@ -512,20 +509,12 @@
 			<div class="popup-content">
 				<h2>Welcome to Starmap!</h2>
 				<p>
-					Starmap is a free ISAN-based 3D map for the game <a href="https://www.starbasegame.com/">Starbase</a>!
-					You can use these
-					coordinates in-game by <a href="https://isan.to/doc">
-						installing
-						ISAN
-					</a> on your ship.
+					Starmap is a free TPS-based 3D map for the game <a href="https://www.starbasegame.com/">Starbase</a>!
+
 					<br><br>
 					To give feedback or report bugs please create a support ticket <a
-						href="https://discord.gg/VnU8apR">here</a>
+						href="https://discord.gg/umqq6DamZS">here</a>
 					<br>
-					Private layers are a premium feature. If you want to acquire one for your faction, please open a
-					diplomatic ticket in
-					the #contact_us channel of the <a href="https://discord.gg/VnU8apR">Collective Discord</a>
-					<br><br>
 					This website uses cookies for functional and analytical purposes. This website runs on Nginx, and as such some metrics such as IP may be logged. Additionally if you login, Discord will share your username and Discord ID. No information will be shared, however if any users are banned then that fact (nothing else) will be shared. Press
 					"Accept" to continue.
 				</p>
