--- a/public/index.html
+++ b/public/index.html
@@ -57,9 +57,9 @@
 		<div class="loading-elevated" id="loading-elevated">
 			<svg class="loading-text" xmlns="http://www.w3.org/2000/svg" width="299.5" height="64" viewBox="0 0 299.5 64">
 				<g id="Group_1" data-name="Group 1" transform="translate(-732 895)">
-					<text id="Starmap" transform="translate(732 -843)" fill="#707070" font-size="60"
+					<text id="TPS" transform="translate(732 -843)" fill="#707070" font-size="60"
 						font-family="SquadaOne-Regular, Squada One">
-						<tspan x="0" y="0">Starmap</tspan>
+						<tspan x="0" y="0">TPS</tspan>
 					</text>
 					<text id="Tactical_" data-name="Tactical " transform="translate(836 -867)"
 						fill="#707070" font-size="21" font-family="SquadaOne-Regular, Squada One">
