--- a/public/index.html
+++ b/public/index.html
@@ -320,7 +320,7 @@
 					</div>
 					<div class="option-02-04">
 						<div class="checkbox-option checkbox">
-							<input id="isanRangeDisp" type="checkbox" name="isanRangeDisp">
+							<input id="tpsRangeDisp" type="checkbox" name="tpsRangeDisp">
 							<p style="display: inline;">Display TPS range</p>
 						</div>
 					</div>
@@ -370,7 +370,7 @@
 					</div>
 					<div class="option-02-12">
 						<div class="checkbox-option checkbox">
-							<input id="showIsanAxis" type="checkbox" name="showIsanAxis">
+							<input id="showTpsAxis" type="checkbox" name="showTpsAxis">
 							<p style="display: inline;">Show TPS axis</p>
 						</div>
 					</div>
