Testing Confirmation Dialog Changes

--- a/public/index.html
+++ b/public/index.html
@@ -528,6 +528,7 @@
 				</h2>
 
 				<button id="betterConfirm-yes">Yes</button>
+				<button id="betterConfirm-ok">OK</button>
 				<button id="betterConfirm-no">No</button>
 			</div>
 		</div>
