Hardware Acceleration Warning

--- a/public/index.html
+++ b/public/index.html
@@ -511,6 +511,10 @@
 				<p>
 					Starmap is a free IPS-based 3D map for the game <a href="https://www.starbasegame.com/">Starbase</a>!
 
+					<div id="hw-acceleration-warning">
+					<h3>Warning: It appears that hardware acceleration is not enabled on your system. <br>
+					This may result in poor performance or high CPU utilization</h3></div>
+
 					<br><br>
 					To give feedback or report bugs please create a support ticket <a
 						href="https://discord.gg/umqq6DamZS">here</a>
