--- a/public/index.html
+++ b/public/index.html
@@ -57,13 +57,13 @@
 		<div class="loading-elevated" id="loading-elevated">
 			<svg class="loading-text" xmlns="http://www.w3.org/2000/svg" width="299.5" height="64" viewBox="0 0 299.5 64">
 				<g id="Group_1" data-name="Group 1" transform="translate(-732 895)">
-					<text id="TPS" transform="translate(732 -843)" fill="#707070" font-size="60"
+					<text id="IPS" transform="translate(732 -843)" fill="#707070" font-size="60"
 						font-family="SquadaOne-Regular, Squada One">
-						<tspan x="0" y="0">TPS</tspan>
+						<tspan x="0" y="0">IPS</tspan>
 					</text>
-					<text id="Tactical_" data-name="Tactical " transform="translate(836 -867)"
+					<text id="Independant_" data-name="Tactical " transform="translate(836 -867)"
 						fill="#707070" font-size="21" font-family="SquadaOne-Regular, Squada One">
-						<tspan x="0" y="0">Tactical</tspan>
+						<tspan x="0" y="0">Independant</tspan>
 					</text>
 					<text id="Positioning_System" data-name="Positioning System" transform="translate(836 -843)"
 						fill="#707070" font-size="21" font-family="SquadaOne-Regular, Squada One">
@@ -80,7 +80,7 @@
 				By Spedione, based off of code from The Collective
 			</p>-->
 			<div class="loading-container-sub">
-				<p id="loading-text" class="loading-text"> Loading UI-Interface... </p>
+				<p id="loading-text" class="loading-text"> Loading TACMap... Powered by IPS </p>
 			</div>
 		</div>
 	</div>
@@ -320,8 +320,8 @@
 					</div>
 					<div class="option-02-04">
 						<div class="checkbox-option checkbox">
-							<input id="tpsRangeDisp" type="checkbox" name="tpsRangeDisp">
-							<p style="display: inline;">Display TPS range</p>
+							<input id="ipsRangeDisp" type="checkbox" name="ipsRangeDisp">
+							<p style="display: inline;">Display IPS range</p>
 						</div>
 					</div>
 
@@ -370,8 +370,8 @@
 					</div>
 					<div class="option-02-12">
 						<div class="checkbox-option checkbox">
-							<input id="showTpsAxis" type="checkbox" name="showTpsAxis">
-							<p style="display: inline;">Show TPS axis</p>
+							<input id="showIpsAxis" type="checkbox" name="showIpsAxis">
+							<p style="display: inline;">Show IPS axis</p>
 						</div>
 					</div>
 				</div>
@@ -509,7 +509,11 @@
 			<div class="popup-content">
 				<h2>Welcome to Starmap!</h2>
 				<p>
-					Starmap is a free TPS-based 3D map for the game <a href="https://www.starbasegame.com/">Starbase</a>!
+					Starmap is a free IPS-based 3D map for the game <a href="https://www.starbasegame.com/">Starbase</a>!
+
+					<div id="hw-acceleration-warning">
+					<h3>Warning: It appears that hardware acceleration is not enabled on your system. <br>
+					This may result in poor performance or high CPU utilization</h3></div>
 
 					<br><br>
 					To give feedback or report bugs please create a support ticket <a
