--- a/public/index.html
+++ b/public/index.html
@@ -574,7 +574,7 @@
 						href="https://discord.gg/umqq6DamZS">here</a>
 
 					<br>
-					This website uses cookies for functional and analytical purposes. This website runs on Nginx, and as such some metrics such as IP may be logged. Additionally if you login, Discord will share your username and Discord ID. No information will be shared, however if any users are banned then that fact (nothing else) will be shared. Press
+					This website uses cookies for functional purposes. This website runs on Nginx, and as such some metrics such as IP may be logged. Additionally if you login, Discord will share your username and Discord ID, in order to show private "layers" on the map.  Press
 					"Accept" to continue.
 				</p>
 				<button id="acceptCookies">Accept</button>
